@@ -19,9 +19,6 @@
   <form name="nupf"
         method="get"
         action="http://www.nupedia.com/n_search.fcgi">
-
-    <COMMENT> The following field was active (i.e. had focus) when the search was generated. </COMMENT>
-
     <input type="hidden" name="request" value="" />
   </form>
   <script><![CDATA[
@@ -30,19 +27,7 @@
       if( nullArgs("nup", q) )
         return;
 
-      if( q == "" )
-      {
-        openSearchWindow("http://www.nupedia.com/");
-        return;
-      }
-
-      // FORM variables for nupf
-
-      // The wizard assigned the search string to this form field value because
-      // this field was the active element when the search file was generated.
-      // Change this to args.q if the search string is parsed with parseArgs.
       document.nupf.request.value = q;
-
       submitForm(nupf);
     }
   ]]></script>
